# Explainable-Recommendation-System

./: .gitignore  .pre-commit-config.yaml  0333.py  README.md  demo.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
notebooks/: analysis_demo.ipynb
scripts/: analyze_data.py
src/data/: pipeline.py
src/evaluation/: metrics.py
src/explainability/: generator.py
src/models/: recommenders.py
tests/: test_recommendation_system.py
